--- a/ChatClient/Resources/Border.xaml
+++ b/ChatClient/Resources/Border.xaml
@@ -80,4 +80,14 @@
             </DataTrigger>
         </Style.Triggers>
     </Style>
+    <Style x:Key="paperClipBorder" TargetType="{x:Type Border}">
+        <Setter Property="Height" Value="35"/>
+        <Setter Property="Width" Value="30"/>
+        <Setter Property="CornerRadius" Value="5"/>
+        <Setter Property="BorderThickness" Value="2"/>
+        <Setter Property="BorderBrush" Value="#9B9B9B"/>
+        <Setter Property="Padding" Value="1"/>
+        <Setter Property="Margin" Value="5,5,0,5"/>
+        <Setter Property="Background" Value="{StaticResource typeMessageGridColors}"/>
+    </Style>
 </ResourceDictionary>
