--- a/ChatClient/Views/AdditionalViews/PrivateChatView.xaml
+++ b/ChatClient/Views/AdditionalViews/PrivateChatView.xaml
@@ -8,6 +8,7 @@
              xmlns:controls="clr-namespace:ChatClient.Controls"
              xmlns:additionalViews="clr-namespace:ChatClient.Views.AdditionalViews"
              xmlns:extensions="clr-namespace:ChatClient.Extensions"
+             xmlns:helpers="clr-namespace:ChatClient.Helpers"
              xmlns:sharedItems="clr-namespace:SharedItems.Enums;assembly=SharedItems"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors" xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:ChatViewModel}"
              mc:Ignorable="d" 
@@ -15,7 +16,9 @@
     <UserControl.Resources>
         <converters:ByteToImageConverter x:Key="byteToImageConverter"/>
     </UserControl.Resources>
-    <Grid Background="White">
+    <Grid x:Name="firstGrid" 
+          Background="White" 
+          helpers:HyperlinksDetetectionHelper.ChromiumWebBrowserPanel="{Binding ElementName=firstGrid}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition MinWidth="200" Width="{Binding UsersColumnWidth, Mode=TwoWay}"/>
             <ColumnDefinition Width="{Binding MessagesColumnWidth, Mode=TwoWay}"
@@ -144,10 +147,8 @@
                     </Button>
                 </Border>
             </Grid>
-
-            <ListBox Grid.Row="1"
-                Style="{StaticResource messagesListBox}"/>
-
+            <ItemsControl Style="{StaticResource messagesListBox}"
+                          Grid.Row="1"/>
             <Border Grid.Row="2"
                     BorderBrush="#AAAEB2"
                     BorderThickness="0,0,1,1" Grid.RowSpan="2">
