--- a/ChatClient/Resources/ListBox.xaml
+++ b/ChatClient/Resources/ListBox.xaml
@@ -284,7 +284,7 @@
     </Style>
 
     <Style x:Key="messagesListBox" x:Name="messagesList" TargetType="{x:Type ItemsControl}">
-        <Setter Property="ItemsSource" Value="{Binding CurrentChatGroup.Messages}"/>
+        <Setter Property="ItemsSource" Value="{Binding CurrentChatGroup.MessagesViewModel}"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto"/>
         <Setter Property="Background" Value="{StaticResource mainMessageBoxColors}"/>
@@ -327,23 +327,23 @@
                             HorizontalAlignment="Left">
                         <DockPanel Name="dockPanel"
                                Background="Transparent">
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger  EventName="ScrollChanged"
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger  EventName="ScrollChanged"
                                              SourceObject="{Binding RelativeSource={RelativeSource AncestorType={x:Type extensions:ScrollViewerExtension}}}"
                                              SourceName="scroll">
-                                <i:InvokeCommandAction Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}
+                                    <i:InvokeCommandAction Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}
                                             , Path=DataContext.MessageReadCommand}">
-                                    <i:InvokeCommandAction.CommandParameter>
-                                        <MultiBinding Converter="{StaticResource multiBindingConverter}">
-                                            <Binding Path="."/>
-                                            <Binding ElementName="dockPanel"/>
-                                            <Binding RelativeSource="{RelativeSource AncestorType={x:Type ItemsControl}}"/>
-                                            <Binding Source="2"/>
-                                        </MultiBinding>
-                                    </i:InvokeCommandAction.CommandParameter>
-                                </i:InvokeCommandAction>
-                            </i:EventTrigger>
-                            <!--<i:EventTrigger  EventName="Loaded">
+                                        <i:InvokeCommandAction.CommandParameter>
+                                            <MultiBinding Converter="{StaticResource multiBindingConverter}">
+                                                <Binding Path="."/>
+                                                <Binding ElementName="dockPanel"/>
+                                                <Binding RelativeSource="{RelativeSource AncestorType={x:Type ItemsControl}}"/>
+                                                <Binding Source="2"/>
+                                            </MultiBinding>
+                                        </i:InvokeCommandAction.CommandParameter>
+                                    </i:InvokeCommandAction>
+                                </i:EventTrigger>
+                                <!--<i:EventTrigger  EventName="Loaded">
                                 <i:InvokeCommandAction Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}
                                             , Path=DataContext.MessageLoadedCommand}">
                                     <i:InvokeCommandAction.CommandParameter>
@@ -355,63 +355,63 @@
                                     </i:InvokeCommandAction.CommandParameter>
                                 </i:InvokeCommandAction>
                             </i:EventTrigger>-->
-                            <i:EventTrigger  EventName="Loaded"
+                                <i:EventTrigger  EventName="Loaded"
                                              SourceObject="{Binding RelativeSource={RelativeSource AncestorType={x:Type extensions:ScrollViewerExtension}}}"
                                              SourceName="scroll">
-                                <i:InvokeCommandAction Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}
+                                    <i:InvokeCommandAction Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}
                                             , Path=DataContext.MessageReadCommand}">
-                                    <i:InvokeCommandAction.CommandParameter>
-                                        <MultiBinding Converter="{StaticResource multiBindingConverter}">
-                                            <Binding Path="."/>
-                                            <Binding ElementName="dockPanel"/>
-                                            <Binding RelativeSource="{RelativeSource AncestorType={x:Type ItemsControl}}"/>
-                                            <Binding Source="2"/>
-                                        </MultiBinding>
-                                    </i:InvokeCommandAction.CommandParameter>
-                                </i:InvokeCommandAction>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                        <Border CornerRadius="25" 
+                                        <i:InvokeCommandAction.CommandParameter>
+                                            <MultiBinding Converter="{StaticResource multiBindingConverter}">
+                                                <Binding Path="."/>
+                                                <Binding ElementName="dockPanel"/>
+                                                <Binding RelativeSource="{RelativeSource AncestorType={x:Type ItemsControl}}"/>
+                                                <Binding Source="2"/>
+                                            </MultiBinding>
+                                        </i:InvokeCommandAction.CommandParameter>
+                                    </i:InvokeCommandAction>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                            <Border CornerRadius="25" 
                                 BorderThickness="2.5"
                                     Width="30" 
                                     Height="30">
-                            <Ellipse >
-                                <Ellipse.Fill>
-                                    <ImageBrush ImageSource="{Binding UserModel.UserProfile.Image, Converter={StaticResource byteToImageConverter}}"
+                                <Ellipse >
+                                    <Ellipse.Fill>
+                                        <ImageBrush ImageSource="{Binding MessageModel.UserModel.UserProfile.Image, Converter={StaticResource byteToImageConverter}}"
                                                                 Stretch="UniformToFill"/>
-                                </Ellipse.Fill>
-                            </Ellipse>
-                            <Border.Style>
-                                <Style TargetType="{x:Type Border}">
-                                    <Setter Property="BorderBrush" Value="DarkRed"/>
-                                    <Style.Triggers>
-                                        <DataTrigger Binding="{Binding UserModel.UserProfile.IsOnline}" Value="True">
-                                            <Setter Property="BorderBrush" Value="Green"/>
-                                        </DataTrigger>
-                                    </Style.Triggers>
-                                </Style>
-                            </Border.Style>
-                        </Border>
+                                    </Ellipse.Fill>
+                                </Ellipse>
+                                <Border.Style>
+                                    <Style TargetType="{x:Type Border}">
+                                        <Setter Property="BorderBrush" Value="DarkRed"/>
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding MessageModel.UserModel.UserProfile.IsOnline}" Value="True">
+                                                <Setter Property="BorderBrush" Value="Green"/>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Border.Style>
+                            </Border>
                             <DockPanel>
                                 <StackPanel Orientation="Horizontal"
                                         DockPanel.Dock="Top">
-                                    <TextBlock Text="{Binding Path=UserModel.UserProfile.Username}"
-                                       Foreground="{Binding Path=UserModel.UserProfile.UsernameColor}"
+                                    <TextBlock Text="{Binding Path=MessageModel.UserModel.UserProfile.Username}"
+                                       Foreground="{Binding Path=MessageModel.UserModel.UserProfile.UsernameColor}"
                                        Margin="10,0,5,0"
                                        FontSize="18"/>
-                                    <TextBlock Text="{Binding Path=Time}"
+                                    <TextBlock Text="{Binding Path=MessageModel.Time}"
                                            FontSize="11"
                                            Margin="0,5,0,0"
                                            Foreground="#848484"
                                            FontWeight="SemiBold"/>
-                                    <Image Source="{Binding CheckStatus
+                                    <Image Source="{Binding MessageModel.CheckStatus
                                     , Converter={StaticResource messageStatusToImageConverter}}"
                                        Width="15"
                                        Height="15"
                                        Margin="5,0,0,0"/>
                                 </StackPanel>
                                 <StackPanel>
-                                    <TextBlock 
+                                    <TextBlock
                                        x:Name="textMessage"
                                        Margin="10,-5,0,0"
                                        Foreground="Black"
@@ -419,35 +419,43 @@
                                        TextWrapping="Wrap"
                                        HorizontalAlignment="Left"
                                        Visibility="Collapsed"
-                                       helpers:HyperlinksDetetectionHelper.Text="{Binding Message.TextMessage, Mode=TwoWay}"/>
-                                    <TextBlock x:Name="pageDescription"
-                                       Visibility="Collapsed"
-                                           TextWrapping="Wrap"
-                                           Margin="10,5,10,5"
-                                               FontSize="16"/>
-                                    <Image x:Name="pageImage"
-                                   Visibility="Collapsed"
-                                   Source="{Binding RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}
-                                       , Path=DataContext.DescriptionImage}"
-                                       MaxHeight="400"
-                                       MaxWidth="400"
+                                       helpers:HyperlinksDetetectionHelper.Text="{Binding MessageModel.Message.TextMessage, Mode=TwoWay}"/>
+                                    <DockPanel Visibility="{Binding HyperlinkPanelVisibility}">
+                                        <Rectangle Width="3"
+                                               Fill="#9193B2"
+                                               Margin="5,0,0,0"/>
+                                        <StackPanel>
+                                            <TextBlock Text="{Binding MessageModel.HyperlinkDescriptionModel.HyperlinkTitle}"
+                                                       FontWeight="DemiBold"
+                                                       Margin="10,5,0,0"
+                                                       FontSize="18"/>
+                                            <TextBlock TextWrapping="Wrap"
+                                           Margin="10,0,10,5"
+                                               FontSize="16"
+                                               Text="{Binding MessageModel.HyperlinkDescriptionModel.HyperlinkDescription}"
+                                                       helpers:HyperlinksDetetectionHelper.Text="{Binding MessageModel.HyperlinkDescriptionModel.HyperlinkDescription}"/>
+                                            <Image Source="{Binding MessageModel.HyperlinkDescriptionModel.HyperlinkImage, Converter={StaticResource byteToImageConverter}}"
+                                       MaxHeight="250"
+                                       MaxWidth="250"
                                        HorizontalAlignment="Left"
                                        Margin="10,0,10,5"/>
+                                        </StackPanel>
+                                    </DockPanel>
                                 </StackPanel>
                                 <Image x:Name="imageMessage" 
-                                   Source="{Binding Message.ImageMessage, Converter={StaticResource byteToImageConverter}}"
+                                   Source="{Binding MessageModel.Message.ImageMessage, Converter={StaticResource byteToImageConverter}}"
                                    MaxHeight="300"
                                    MaxWidth="300"
                                    Visibility="Collapsed"
                                    HorizontalAlignment="Left"/>
                             </DockPanel>
-                    </DockPanel>
+                        </DockPanel>
                     </Border>
                     <DataTemplate.Triggers>
-                        <DataTrigger Binding="{Binding MessageInformationType}" Value="Text">
+                        <DataTrigger Binding="{Binding MessageModel.MessageInformationType}" Value="Text">
                             <Setter TargetName="textMessage" Property="Visibility" Value="Visible"/>
                         </DataTrigger>
-                        <DataTrigger Binding="{Binding MessageInformationType}" Value="Image">
+                        <DataTrigger Binding="{Binding MessageModel.MessageInformationType}" Value="Image">
                             <Setter TargetName="imageMessage" Property="Visibility" Value="Visible"/>
                         </DataTrigger>
                     </DataTemplate.Triggers>
@@ -455,6 +463,4 @@
             </Setter.Value>
         </Setter>
     </Style>
-
-
 </ResourceDictionary>
