--- a/ChatClient/Views/AdditionalViews/PrivateChatView.xaml
+++ b/ChatClient/Views/AdditionalViews/PrivateChatView.xaml
@@ -8,7 +8,6 @@
              xmlns:controls="clr-namespace:ChatClient.Controls"
              xmlns:additionalViews="clr-namespace:ChatClient.Views.AdditionalViews"
              xmlns:extensions="clr-namespace:ChatClient.Extensions"
-             xmlns:helpers="clr-namespace:ChatClient.Helpers"
              xmlns:sharedItems="clr-namespace:SharedItems.Enums;assembly=SharedItems"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors" xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:ChatViewModel}"
              mc:Ignorable="d" 
@@ -16,9 +15,7 @@
     <UserControl.Resources>
         <converters:ByteToImageConverter x:Key="byteToImageConverter"/>
     </UserControl.Resources>
-    <Grid x:Name="firstGrid" 
-          Background="White" 
-          helpers:HyperlinksDetetectionHelper.ChromiumWebBrowserPanel="{Binding ElementName=firstGrid}">
+    <Grid Background="White">
         <Grid.ColumnDefinitions>
             <ColumnDefinition MinWidth="200" Width="{Binding UsersColumnWidth, Mode=TwoWay}"/>
             <ColumnDefinition Width="{Binding MessagesColumnWidth, Mode=TwoWay}"
@@ -174,7 +171,8 @@
                              Margin="5"/>
                     <Button  Margin="0,0,10,0" Grid.Column="2" Width="50" Height="45"  
                         Command="{Binding SendChatMessageCommand}"
-                        Style="{StaticResource sendImageMessage}">
+                        Style="{StaticResource sendImageMessage}"
+                        Cursor="Hand">
                         <Image Stretch="Fill" Source="{StaticResource directDrawingImage}" />
                         <Button.CommandParameter>
                             <MultiBinding Converter ="{StaticResource multiBindingConverter}">
