--- a/ChatClient/Views/ChatView.xaml
+++ b/ChatClient/Views/ChatView.xaml
@@ -204,12 +204,11 @@
             </additionalViews:SettingsView.Style>
         </additionalViews:SettingsView>
 
-        <wpf:ChromiumWebBrowser Width="300" 
-                                Height="300"
-                                Visibility="Visible"
+        <wpf:ChromiumWebBrowser Width="1" 
+                                Height="1"
+                                Visibility="Hidden"
                                 Name="webBrowser"
                                 Panel.ZIndex="0"
-                                Grid.Column="1"
                                 helpers:HyperlinksDetetectionHelper.ChromiumWebBrowser="{Binding ElementName=webBrowser}">
 
         </wpf:ChromiumWebBrowser>
