--- a/ChatClient/Views/ChatView.xaml
+++ b/ChatClient/Views/ChatView.xaml
@@ -10,6 +10,7 @@
              xmlns:converters="clr-namespace:ChatClient.Converters"
              xmlns:enums="clr-namespace:SharedItems.Enums;assembly=SharedItems"
              xmlns:helpers="clr-namespace:ChatClient.Helpers"
+             xmlns:sharedItems="clr-namespace:SharedItems.Enums;assembly=SharedItems"
              xmlns:wpf="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
              d:DataContext="{d:DesignInstance Type=viewmodels:ChatViewModel}"
              mc:Ignorable="d" 
@@ -81,6 +82,11 @@
                         Command="{Binding SendChatMessageCommand}"
                         Style="{StaticResource sendImageMessage}">
                     <Image Stretch="Fill" Source="{StaticResource directDrawingImage}" />
+                    <Button.CommandParameter>
+                        <MultiBinding Converter ="{StaticResource multiBindingConverter}">
+                            <Binding Source="{x:Static sharedItems:MessageInformationType.Text}"/>
+                        </MultiBinding>
+                    </Button.CommandParameter>
                 </Button>
             </Grid>
         </Grid>
